--- a/NewsSnips/app/src/main/res/drawable/drawer_selected_item.xml
+++ b/NewsSnips/app/src/main/res/drawable/drawer_selected_item.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@drawable/highlight_color" android:state_checked="true"/>
+    <item android:state_pressed="true" android:drawable="@color/colorAccent" />
+    <item android:state_focused="true" android:drawable="@color/colorAccent" />
+    <item android:state_activated="true" android:drawable="@color/colorAccent" />
+    <item android:state_active="true" android:drawable="@color/colorAccent"/>
+    <item android:state_checked="true" android:drawable="@color/colorAccent"/>
+    <item android:drawable="@android:color/transparent" />
 </selector>
