--- a/NewsSnips/app/src/main/res/layout/header.xml
+++ b/NewsSnips/app/src/main/res/layout/header.xml
@@ -3,35 +3,34 @@
     android:layout_width="match_parent"
     android:layout_height="190dp"
     android:background="@drawable/header_background"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:src="@drawable/logo"
             android:layout_weight="4"
             android:paddingTop="30dp"
-            />
+            android:src="@drawable/logo" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="@string/news_intro"
-            android:textSize="30sp"
-            android:fontFamily="sans-serif-condensed"
-            android:textStyle="bold"
-            android:background="@color/colorAccent"
-            android:textColor="@color/colorPrimary"
-            android:layout_margin="@dimen/fifteen"
+            android:layout_margin="@dimen/ten"
             android:layout_weight="1"
-            android:padding="1dp"
+            android:background="@color/colorAccent"
+            android:fontFamily="sans-serif-condensed"
             android:gravity="bottom"
+            android:padding="1dp"
+            android:text="@string/news_intro"
             android:textAlignment="center"
-            />
+            android:textColor="@color/colorPrimary"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
